# benchmark-mcp-servers-v2

./: .gitignore  ADDING_SERVERS.md  README.md  backlog-tests.md  backlog.md  bench-round-1.md  build-server-images.sh  docker-compose.yml  test_mcp_servers.py
api-service/: Dockerfile  go.mod  main.go
benchmark/: benchmark.js  collect_stats.py  consolidate.py  extract_stats.py  generate_detailed_latencies.py  generate_latest_table.py  generate_table.py  run_benchmark.sh  test_args.sh  test_consolidate.py
benchmark/results/20260210_182244/: summary.json
benchmark/results/20260210_212323/: summary.json
config/: mockserver.json
go-server/: Dockerfile  FINDINGS.md  go.mod  main.go
http4k-server/: .gitignore  Dockerfile  Dockerfile.native  build.gradle.kts  settings.gradle.kts
http4k-server/gradle/: libs.versions.toml
infra/redis/: seed.py
java-server/: Dockerfile  Dockerfile.native  build.gradle  settings.gradle
java-vt-server/: Dockerfile  Dockerfile.native  FINDINGS.md  build.gradle  settings.gradle
java-webflux-server/: Dockerfile  Dockerfile.native  FINDINGS.md  build.gradle  settings.gradle
micronaut-server/: Dockerfile  Dockerfile.native  FINDINGS.md  build.gradle  settings.gradle
nodejs-server/: Dockerfile  Dockerfile.bun  FINDINGS.md  index.js  package.json
python-server/: Dockerfile  FINDINGS.md  main.py  requirements.txt
quarkus-server/: Dockerfile  Dockerfile.native  FINDINGS.md  build.gradle  gradle.properties  settings.gradle
rust-server/: Cargo.toml  Dockerfile  FINDINGS.md
rust-server/src/: main.rs
(+239 files in other folders)
