[package]
name = "rust-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.17", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.27", features = ["tokio-comp"] }
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }
